# kamillibc

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Dashboard_chors.cmake  LICENSE  Makefile  README.md  m4.Makefile
cmake/: CMakeLists.txt  add_m4_target.cmake  add_subdirectories.cmake  cppcheck.cmake  cross-compiling-utils.cmake  kcuk_common.cmake  stm32cubemx.cmake  subdirlist.cmake
cmake/Platform/: ARM-GNU-C-Cortex-M0+.cmake  ARM-GNU-C-Cortex-M0.cmake  ARM-GNU-C-Cortex-M0plus.cmake  ARM-GNU-C-Cortex-M1.cmake  ARM-GNU-C-Cortex-M3.cmake  ARM-GNU-C-Cortex-M4.cmake  ARM-GNU-C-cortex-m0plus.cmake  ARM-GNU-C-cortex-m4.cmake  ARM-GNU-C-inc.cmake  ARM-GNU-C.cmake  ARM.cmake
cmake/Toolchain/: arm-none-eabi-gcc.cmake
cmake/debug/: CMakeLists.txt
cmake/debug/static/: CMakeLists.txt
cmake/default/: CMakeLists.txt
cmake/release/: CMakeLists.txt
cmake/release/shared/: CMakeLists.txt
doc/: Doxyfile
libs/: .gitignore  CMakeLists.txt
libs/AAA_template/: CMakeLists.txt  README.md
libs/AAA_template/src/: lib.c  lib.h
libs/AAA_template/tests/: main.c
libs/STC/: CMakeLists.txt
libs/STC/tests/: stc_example_from_docs.c
libs/arduino/: install.sh  test.sh
libs/arduino/lib/: kc.h  optional.h
libs/arduino/lib/invoke.hpp/: invoke.hpp
libs/arduino/lib/kc/: aligned_storage.h  bufferedstream.h  intwrap.h  kc.h  make_array.h  pt2.h  ringbuffer.h  sbuffer.h  serialprint.h  test.h  type_traits.h
libs/arduino/lib/tl/: optional.hpp
libs/async/: CMakeLists.txt  readme.md
libs/async/src/async/: async.c  async_unittest.c
libs/bitpack/: bitpack.c  bitpack.h  bitpack_impl.h
libs/contract/: CMakeLists.txt  readme.md
libs/contract/src/contract/: errno_t.h  nonnull.h  result.h
libs/contract/tests/: tests.c
libs/curb/: CMakeLists.txt  README.md
libs/curb/src/: curb.c  curb.h
libs/curb/tests/: CMakeLists.txt  curb_1.c  curb_2.c  curb_fail_1.c  curb_mysqrt_fail_1.c  curb_mysqrt_fail_2.c  curb_warn.c
libs/curb/tests/runtime/: 1.c  2.c  3_fail.c  4_macrocall.c  func.c
libs/extint/: CMakeLists.txt  extint.in.h
libs/extint/tests/: test.c
libs/gnulib/: CMakeLists.txt
libs/gnulib/tests/: gnulib_crc.c  gnulib_eemalloc.c  gnulib_xnanosleep.c
libs/hd44780/: CMakeLists.txt  hd44780-config-default.h  hd44780.h
libs/kuint128/: CMakeLists.txt  LICENSE  Makefile
libs/kuint128/src/: kuint128.c  kuint128.h
libs/kuint128/tests/: add.c  div.c  how_to_split_double_multiplication.c  leftshift.c  logical.c  mult.c  signed.c  test.t.h  testop.c  tostr.c
libs/libc/: CMakeLists.txt  README.md
libs/libc/src/: array_size.h  bit.h  build_bug.h  clocktimeout.c  clocktimeout.h  const_strtok.c  const_strtok.h  crc8.c  kasprintf.c  kasprintf.h  kcolumn.c  kcolumn.h  longestCommonPrefix.c  longestCommonPrefix.h  minmaxof.h  morse.c  morse.h  printex.c  printex.h  result.c  result.h  ringbuffer.c  timespectimeout.c  timespectimeout.h  typecheck.h  unistd_ex.c
libs/libc/src/bitstr/: bitstr.c
libs/libc/src/findmsg/: findmsg.c
libs/libc/src/findmsg/conf/: memcmp.h  newline.c  newline.h  nmea.c  nmea.h  ublox.c  ublox.h
libs/libc/src/pt/: lc.h
libs/libc/src/sectionconf/: sectionconf_config.h  types.h
libs/libc/src/time_ex/: clock.h  internal.h  time_ex.c  time_ex.h  timespec.h  timeval.h
libs/libc/src/uni/: criticalsection.h  gpio.h  rtc.h  types.h  wdg.h
libs/libc/tests/: clocktimeout.c  common.c  curb.c  findmsg.c  macroprint.c  test_const_strtok.c
libs/lua/: CMakeLists.txt
libs/lua/tests/: first_example.c
libs/qiter/: CMakeLists.txt
libs/qiter/src/: array.h  qiter.h
libs/qiter/tests/: test.c
libs/qvalist/: CMakeLists.txt  README.md
libs/qvalist/src/: qvalist.h  qvalist.h.jinja
libs/qvalist/tests/: copytest.c  onetest.c  stdtest.c
libs/rangeint/: CMakeLists.txt  README.md  rangeint.in.h
libs/rangeint/tests/: test.c
libs/ses/: CMakeLists.txt  README.md
libs/ses/src/ses/: ses.c  ses_config.h
libs/ses/tests/: example.c
libs/stimer/linux/: CMakeLists.txt
libs/stimer/src/stimer/: stimer_config.h  stimer_test.c
libs/stimer/stm32/: stimer_callbacks.c
libs/stm32/: byteswap.h  endian.h  features.h  stm32_assert.h
libs/stm32/machine/: common.c  common.h  cyclecnt.h  hal.h  hal_iwdg.c  rtc.h  rtc_time.c  stm32xxxx_ll.h  stm32xxxx_switch_example.h  uart.c  uart_dmarx.h
libs/stm32/sys/: time.c
libs/uni/: CMakeLists.txt
libs/uni/linux/: gpio.c  power.c  spi.c  wdg.c
libs/uni/stm32/: __gpio.h  _types.h  gpio.c  priv.h  types.h  wdg.c
scripts/: c++toc.sh  gen_hal_switch.sh  generate_stdall.h.sh  sed_binary_constant_to_hex.sh  sed_binary_constants_to_hex.sh
src/: Makefile.m4  cdefs.h  clocktimeout.c  clocktimeout.h  constraint.c  constraint.h  container_of.h  filename.h  minmax.h  minmaxof.c  minmaxof.h  printex.c  printex.h  printmacro.h  queue.h  ringbuffer.c  ringbuffer.h  static_assert.h  stdall.h  stream.c  stream.h  time-ex.h  time_ex.c  time_ex.h  try.h  unity
src/c_plus_plus/: README.md  tuple.tc  tuple.th  vector.th
src/ccan/: .gitignore  CMakeLists.txt  ccan
src/contract/: contract.h  require.h  result.h  std.c  std.h
src/findmsg/: findmsg.c  findmsg.h
src/findmsg/confs/: memcmp.c  newline.c  newline.h  stub.c  (+3 more)
src/lib/: bit.h  cdefs.h  check_type.h  clocktimeout.c  clocktimeout.h  config.h  constraint.c  constraint.h  container_of.h  crc8.h  curb.c  curb.h  debug.c  debug.h  filename.h  macroprint.h  minmax.h  minmaxof.c  morse_config.h  printex.c  printex.h  printmacro.h  queue_ex.h  result.c  result.h  ringbuffer.c  ringbuffer.h  static_assert.h  stdall.h  stream.c  stream.h  time_ex.c  time_ex.h  try.c  try.h  typecheck.h  unistd_ex.c  unistd_ex.h  unity
src/linux/: stimer_callback_posix.c  unistd_ex.c
src/stm32/: assert_param.h  breakpoint.h
stm32/src/: assert_failed.c  assert_param.h  stm32hal-switch.h  stm32hal.h
test/: Makefile  findmsg_test.c  main.c  minmax_test.c
test/contract/: tests.c
tests/async/: main.c
tests/global/: findmsg_test.c
tests/lib/: common.c
tests/linux/: CMakeLists.txt
tests/stm32/: CMakeLists.txt  posix.c
(+144 files in other folders)
