cmake_minimum_required(VERSION 3.11)
project(kuint128 LANGUAGES C)
add_library(${PROJECT_NAME} src/kuint128.c)
target_include_directories(${PROJECT_NAME} PUBLIC src)
include(CTest)
if(BUILD_TESTING)
	file(GLOB tests tests/*.c)
	foreach(file IN LISTS tests)
		get_filename_component(name ${file} NAME_WE)
		set(name ${PROJECT_NAME}_${name})
		add_executable(${name} ${file})
		target_link_libraries(${name} PUBLIC ${PROJECT_NAME} kamcuk_curb)
		add_test(NAME ${name} COMMAND ${name})
	endforeach()
endif()

